--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -21,6 +16,21 @@
 .App-link {
   color: #61dafb;
 }
+
+.main-page{
+  height: 100vh;
+  min-height: 650px;
+  background:#282c34;
+  color: gray;
+
+}
+
+
+div.google-map {
+  height: 150px;
+  width: 250px;
+}
+
 
 @keyframes App-logo-spin {
   from {
